# ic4700

./: .gitignore
LispExprJava/: .gitignore  LispExpr  README.md  build.gradle
LispExprJava/gradle/wrapper/: gradle-wrapper.properties
LispExprJava/src/main/java/ac/tec/ic/ic4700/collections/tree/: BinaryTree.java  KTree.java  Tree.java
LispExprJava/src/main/java/ac/tec/ic/ic4700/collections/tree/impl/: DefaultKTreeImpl.java
LispExprJava/src/main/java/ac/tec/ic/ic4700/lispexpr/cli/: CLI.java  CLIController.java
LispExprJava/src/main/java/ac/tec/ic/ic4700/lispexpr/cli/impl/: DefaultCLIControllerImpl.java
LispExprJava/src/main/java/ac/tec/ic/ic4700/lispexpr/eval/: Evaluator.java
LispExprJava/src/main/java/ac/tec/ic/ic4700/lispexpr/eval/impl/: DefaultEvaluatorImpl.java
LispExprJava/src/main/java/ac/tec/ic/ic4700/lispexpr/locators/: ControllerLocator.java  ServiceLocator.java
LispExprJava/src/main/java/ac/tec/ic/ic4700/lispexpr/parser/: Parser.java
LispExprJava/src/main/java/ac/tec/ic/ic4700/lispexpr/parser/impl/: StringLineParser.java
LispExprJava/src/main/java/ac/tec/ic/ic4700/lispexpr/runtime/: BinaryOperator.java  Runtime.java  UnaryOperator.java
LispExprJava/src/test/java/ac/tec/ic/ic4700/lispexpr/: ServiceLocatorTest.java
LispExprJava/src/test/java/ac/tec/ic/ic4700/lispexpr/locators/: ControllerLocatorTest.java
RacketBinTree/: binary-tree.rkt
dyn_array/: CMakeLists.txt
dyn_array/src/: CMakeLists.txt  dyn_array.c  dyn_array.h
dyn_array/test/: CMakeLists.txt  test_dyn_array.c
eliza/: README.md  eliza.pl
(+13 files in other folders)
